--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,8 +1,18 @@
 .root {
 	display: flex;
-	justify-content: center;
-	align-items: center;
 	height: 100vh;
+}
+
+.content {
+	margin: auto;
+}
+
+.title {
 	text-align: center;
-	font-family: Arial, Helvetica, sans-serif;
+	color: white;
+}
+
+.createGame {
+	display: block;
+	margin: 12px auto 0;
 }
