--- a/styles/GamePage.module.scss
+++ b/styles/GamePage.module.scss
@@ -27,26 +27,42 @@ $dimension: calc(min(
 	display: flex;
 	position: absolute;
 	justify-content: space-between;
-	align-items: center;
 	top: 0;
 	left: 0;
 	right: 0;
 	padding: 12px 16px;
+	font-size: 18px;
+	font-weight: bold;
+	color: white;
+	text-shadow: 0 0 5px black;
 	z-index: 1;
 }
 
-.users {
-	font-size: 18px;
-	font-weight: bold;
-	color: white;
-	text-shadow: 0 0 5px black;
+.user {
+	display: flex;
+	align-items: center;
+	
+	& + & {
+		margin-top: 12px;
+	}
 }
 
-.status {
-	font-size: 18px;
-	font-weight: bold;
-	color: white;
-	text-shadow: 0 0 5px black;
+.userRank {
+	$dimension: 30px;
+	
+	width: $dimension;
+	height: $dimension;
+	margin-right: 8px;
+	text-align: center;
+	line-height: $dimension;
+}
+
+.userName {
+	margin-right: auto;
+}
+
+.userScore {
+	margin-left: 16px;
 }
 
 .start {
